--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @media (max-width:414px) {
     body{
-        background-color: #de4f3a;
-        font-family:'Roboto', sans-serif;
+        background-color: #34502b;
+        font-family: 'Gloria Hallelujah', cursive;
     }
     .topo{
-        background-color: #722731;
+        background-color: #f7631e;
         color: white;
         width: 100%;
         height: 92px;
@@ -15,11 +15,22 @@
         left: 0;
         right: 0;
         z-index: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
     h1{
-        color:#bd1b43;
-        font-size: 32px;
-        font-family:'Righteous', cursive;
+        color:#ff3a3a;
+        font-size: 42px;
+        border-radius:10px ;
+        text-shadow: #97B873 5px 0 5px;
+
+    }
+    h1 > img{
+        width: 100px;
+        height: 80px;
+        -webkit-transform: scale(1.2);
+        transform: scale(1.2);
     }
     h2{
         font-size: 18px;
@@ -27,8 +38,8 @@
     h3{
         font-size: 26px;
         font-weight: 400;
-        color:#ffffff;
-        font-family:'Righteous', cursive;
+        color:#ffefb9;
+
     }
     h4{
         font-size: 16px;
@@ -125,6 +136,8 @@
     }
     ion-icon{
         color: #158fa2;
+        width: 40px;
+        height: 40px;
     }
 
     .verif{
